fixed the weird overlap with the5wire logo  on larger screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     z-index: 5;
+    max-height: 456px;
     position: absolute;
     animation: slideInLeft;
     -moz-animation: slideInLeft;
@@ -52,6 +53,7 @@ and remain visible after the animation was complete */
     margin-left: auto;
     margin-right: auto;
     z-index: 10;
+    max-height: 456px;
     position: absolute;
     animation: slideInRight;
     -moz-animation: slideInRight;
@@ -80,9 +82,9 @@ and remain visible after the animation was complete */
     animation-duration: 2s;
     -moz-animation-duration: 2s;
     -webkit-animation-duration: 2s;
-    animation-delay: 1.75s;
-    -moz-animation-delay: 1.75s;
-    -webkit-animation-delay: 1.75s;
+    animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -webkit-animation-delay: 1s;
     animation-fill-mode: forwards;
 }
 /* ================================================= */
